Security zoals eerst is getracht te maken is er volledig uitgehaald. Er is nu voor gekozen vanwege de tijd om een basissecurity met twee verschillende rollen te maken.

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -25,10 +25,10 @@
         <a class="nav-link" th:href="@{/}">home</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" th:href="@{/customers}">Klant management</a>
+        <a class="nav-link" th:href="@{customers}">Klant management</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" th:href="@{/cars}">Auto management</a>
+        <a class="nav-link" th:href="@{cars}">Auto management</a>
       </li>
     </ul>
   </div>
