--- a/src/main/resources/templates/customers.html
+++ b/src/main/resources/templates/customers.html
@@ -27,10 +27,10 @@
         <a class="nav-link" th:href="@{/}">home</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" th:href="@{/customers}">Klant management</a>
+        <a class="nav-link" th:href="@{customers}">Klant management</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" th:href="@{/cars}">Auto management</a>
+        <a class="nav-link" th:href="@{cars}">Auto management</a>
       </li>
     </ul>
   </div>
@@ -42,7 +42,7 @@
   </div>
   <div class = "row">
     <div class = "col-lg-3">
-      <a th:href = "@{/customers/new}" class = "btn btn-primary btn-sm mb-3"> Nieuwe klant</a>
+      <a th:href = "@{customers/new}" class = "btn btn-primary btn-sm mb-3"> Nieuwe klant</a>
     </div>
 
   </div>
